Add : Base serializer for int and char*

--- a/Common/Common.vcxproj.filters
+++ b/Common/Common.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClInclude Include="include\common\message.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="include\ser\Serializer.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="build.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
