--- a/Common/Common.vcxproj
+++ b/Common/Common.vcxproj
@@ -20,6 +20,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\common\message.h" />
+    <ClInclude Include="include\ser\Serializer.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="build.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
