--- a/Common/Common.vcxproj.filters
+++ b/Common/Common.vcxproj.filters
@@ -42,6 +42,15 @@
     <ClInclude Include="include\Server\Server.h">
       <Filter>Fichiers d%27en-tête\Server</Filter>
     </ClInclude>
+    <ClInclude Include="external\stb_image\stb_image.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="external\stb_image\stb_image_write.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="include\common\Image.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Server\TcpConnection.cpp">
@@ -49,6 +58,9 @@
     </ClCompile>
     <ClCompile Include="src\Server\Server.cpp">
       <Filter>Fichiers sources\Server</Filter>
+    </ClCompile>
+    <ClCompile Include="src\common\Image.cpp">
+      <Filter>Fichiers sources</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
